# pakettic

./: .all-contributorsrc  .gitignore  CHANGELOG.md  LICENSE  README.md  pyproject.toml  report.txt
corpus/gasman/: LICENSE  README  gasman-aquarium.lua  gasman-deathstar.lua  gasman-duck.lua  gasman-fringilloid.lua  gasman-garfield.lua  gasman-hippyllama.lua  gasman-koosh.lua  gasman-moon_river.lua  gasman-phazalea.lua  gasman-phosphenes.lua  gasman-pollen.lua  gasman-quantum_flux.lua  gasman-rainbow_road.lua  gasman-superhero.lua  gasman-uglytwister.lua  gasman-waferscale.lua
corpus/gigabates/: LICENSE  chaos-tunnel.lua  cubic-zirconia.lua  last-christmas.lua  metadrops.lua  terrain-spotting.lua
corpus/ilmenit/: murkwood.lua
corpus/pellicus/: RTXteroids.lua
corpus/pestis/: LICENSE  cthulhu128_unpacked.lua  pulsating-magic-orb.lua  requiem_for_a_piggy.lua  stroboscope.lua
corpus/psenough/: LICENSE  README.md  dr_may_2022.lua  fabracid.lua  illusion03_redux.lua  illusion04.lua  illusion05b.lua  illusion07b.lua  illusion07d.lua  liquid_cool.lua  nevoke256b.lua  outline128_unpacked.lua  outline256_unpacked.lua  ps_-_mountains_of_madness.lua  pswin.lua  rave.lua  ressurection2.lua  the.lua  (+5 more)
data/: cracklebass.lua  cracklebass.tic  cthulhu128.lua  fish.lua  raymarcher.lua  requiem_for_a_piggy.lua  stars.lua
examples/: cracklebass.lua  cthulhu128.lua  fish.lua  requiem_for_a_piggy.lua
pakettic/: __main__.py  ast.py  fileformats.py  main.py  optimize.py  parser.py  printer.py  ticfile.py
tests/: test_cart.py  test_optimization.py  test_parser.py  test_printer.py
(+2 files in other folders)
